--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - python setup.py install
 
 script:
-  - py.test --doctest-modules streams
+  - py.test streams --verbose
   - flake8 streams
 
 notifications:
