--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,17 @@ install:
   - conda update conda
 
   # Install dependencies
-  - conda create -n test-streams python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 zict
+  - conda create -n test-streams python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 coverage codecov -c conda-forge
   - source activate test-streams
 
   - python setup.py install
 
 script:
-  - py.test streams --verbose
+  - coverage run run_tests.py
   - flake8 streams
+
+after_success:
+  - codecov
 
 notifications:
   email: false
