--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ install:
   - conda update conda
 
   # Install dependencies
-  - conda create -n test-streams python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 coverage codecov networkx dask graphviz python-graphviz -c conda-forge
+  - conda create -n test-streams python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 coverage codecov networkx graphviz python-graphviz dask distributed -c conda-forge
   - source activate test-streams
+  - pip install git+https://github.com/dask/distributed.git --upgrade --no-deps
 
   - python setup.py install
 
