--- a/.coveragerc
+++ b/.coveragerc
@@ -8,6 +8,7 @@ omit =
     # ignore _version.py and versioneer.py
     .*version.*
     *_version.py
+    */test_*.py
 
 exclude_lines =
     if __name__ == '__main__':
