--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # https://flake8.readthedocs.io/en/latest/user/error-codes.html
 
 # Note: there cannot be spaces after comma's here
-exclude = __init__.py
+exclude = __init__.py, compatibility.py
 ignore =
     # Extra space in brackets
     E20,
