--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - conda create -n test-streamz python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 coverage codecov networkx graphviz python-graphviz dask distributed pandas bokeh ipython ipykernel ipywidgets -c conda-forge -c bokeh
   - source activate test-streamz
   - pip install git+https://github.com/dask/distributed.git --upgrade --no-deps
+  - pip install weakreflist  # I haven't gotten a cf recipe up yet
 
   - python setup.py install
 
