--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,8 @@ install:
   - conda update conda
 
   # Install dependencies
-  - conda create -n test-streamz python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 coverage codecov networkx graphviz python-graphviz dask distributed pandas bokeh ipython ipykernel ipywidgets python-confluent-kafka librdkafka -c conda-forge -c bokeh
+  - conda create -n test-streamz python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 coverage codecov networkx graphviz python-graphviz dask distributed pandas bokeh ipython ipykernel ipywidgets python-confluent-kafka -c conda-forge -c bokeh
   - source activate test-streamz
-  - pip install --upgrade git+https://github.com/confluentinc/confluent-kafka-python
   - pip install git+https://github.com/dask/distributed.git --upgrade --no-deps
 
   - python setup.py install
