ignore path for projects

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -21,7 +21,8 @@ coverage:
         if_no_uploads: error
         if_not_found: success
         if_ci_failed: failure
-        paths: '!*/tests/.*'
+      ignore:
+        - '*/tests/.*'
 
       tests:
         target: 97.9%
