--- a/.codecov.yml
+++ b/.codecov.yml
@@ -21,8 +21,7 @@ coverage:
         if_no_uploads: error
         if_not_found: success
         if_ci_failed: failure
-        ignore:
-          - '*/tests/.*'
+        paths: '!streamz/.*/tests/.*'
 
       tests:
         target: 97.9%
