Configured Travis CI to use the new conda environment file instead of manually installing them. Also added a few more dependencies to the environment file that were missed

--- a/conda/environments/streamz_dev.yml
+++ b/conda/environments/streamz_dev.yml
@@ -1,6 +1,7 @@
 name: streamz_dev
 channels:
   - conda-forge
+  - bokeh
   - defaults
 dependencies:
   - python>=3.7
@@ -20,3 +21,12 @@ dependencies:
   - numpydoc
   - sphinx
   - sphinx_rtd_theme
+  - codecov
+  - coverage
+  - networkx
+  - graphviz
+  - python-graphviz
+  - bokeh
+  - ipython
+  - ipykernel
+  - ipywidgets
