--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - conda update conda
 
   # Install dependencies
-  - conda create -n test-streamz python=$TRAVIS_PYTHON_VERSION pytest tornado toolz flake8 coverage codecov networkx graphviz python-graphviz dask distributed pandas bokeh ipython ipykernel ipywidgets python-confluent-kafka -c conda-forge -c bokeh
+  - conda env create --name test-streamz --file ./conda/environments/streamz_dev.yml
   - source activate test-streamz
   - pip install git+https://github.com/dask/distributed.git --upgrade --no-deps
 
