--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ log
 .cache/
 .ipynb_checkpoints/
 .vscode
+# conda smithy ci-skeleton start
+*.pyc
+
+build_artifacts
+# conda smithy ci-skeleton end
