--- a/setup.cfg
+++ b/setup.cfg
@@ -39,3 +39,8 @@ max-line-length = 120
 
 [bdist_wheel]
 universal=1
+
+[tool:pytest]
+markers:
+  network: Test requires an internet connection
+  slow: Skipped unless --runslow passed
