Add mqtt source/sink pair

--- a/ci/environment-py38.yml
+++ b/ci/environment-py38.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
+  - python=3.8
   - pytest
   - flake8
   - black
@@ -32,3 +32,5 @@ dependencies:
   - flaky
   - pytest-cov
   - coveralls
+  - paho-mqtt
+  - websockets
