--- a/ci/environment-py310.yml
+++ b/ci/environment-py310.yml
@@ -10,16 +10,11 @@ dependencies:
   - isort
   - tornado
   - toolz
-  - zict
-  - six
-  - librdkafka=1.5.3
+  - librdkafka
   - dask
   - distributed
   - pandas
-  - python-confluent-kafka=1.5.0
-  - numpydoc
-  - sphinx
-  - sphinx_rtd_theme
+  - python-confluent-kafka
   - codecov
   - coverage
   - networkx
@@ -27,8 +22,6 @@ dependencies:
   - pytest-asyncio
   - python-graphviz
   - bokeh
-  - ipython
-  - ipykernel
   - ipywidgets
   - flaky
   - pytest-cov
