support py3.9 -> 3.12, refresh CI

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        CONDA_ENV: [py38, py39, py310]
+        CONDA_ENV: [py39, py310, py311, py312]
     # env:
       # STREAMZ_LAUNCH_KAFKA: true
 
@@ -45,7 +45,7 @@ jobs:
 
       - name: coveralls
         shell: bash -l {0}
-        if: ${{ matrix.os == 'ubuntu-latest' &&  matrix.CONDA_ENV == 'py38' }}
+        if: ${{ matrix.os == 'ubuntu-latest' &&  matrix.CONDA_ENV == 'py312' }}
         run: coveralls
 
   lint:
