--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: master
 
+# Cancel redundant in-progress workflow runs.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     name: ${{ matrix.CONDA_ENV }}-pytest
