--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,7 @@ on:
     branches: "*"
   pull_request:
     branches: master
+  workflow_dispatch:
 
 # Cancel redundant in-progress workflow runs.
 concurrency:
